      a library for layout and rendering of text, with an emphasis on
      internationalization.  (The hope is to improve support for languages
      that SDL_ttf doesn't support well; e.g., Arabic and Telegu.)

      TTF_Font structs and some functions were replaced by a new
      TuxPaint_Font struct and function, which wraps around either TTF_Font
      or SDLPango_Context, depending on whether SDL_Pango is being used.

      Note: STILL NEEDS WORK!

  * New Brushes
    -----------
    * Sparkles (based on old Magic Tool)

  * New Magic tools:
    ----------------
    * Kalidescope
    * Glass Tile
    * Emboss
    * Metal Paint
    * Waves
    * Flower
      (utilizes Bezier curve example code from Wikipedia.org)
    * Foam

  * New Localizations:
    ------------------
    * Thai input method
      Ed Montgomery <edm@rocketmail.com>

    * Wolof translation
      Haby Diallo <haby42@yahoo.fr>

  * Localization Updates:
    ---------------------
    * British English translation
      Caroline Ford <caroline.ford.work@googlemail.com>

    * Dutch translation
      Freek de Kruijf <f.de.kruijf@hetnet.nl>

    * Italian translation
      Flavio "Iron Bishop" Pastore <ironbishop@fsfe.org>

    * South African English translation
      Caroline Ford <caroline.ford.work@googlemail.com>


2007.July.1 (0.9.17)

  * Interface Improvements:
    -----------------------
    * Mouse cursor can be hidden (e.g., using "--hidecursor"), useful on
      touchscreen devices like tablet PCs or the Nokia Mameo devices.
      (Addresses SourceForge RFE #1673344)

    * Added an "autosave" option that assumes you wish to save the current
      picture during Quit.  (Additionally, after saving during Quit or Open,
      it no longer shows 'success' pop-up that must be dismissed.)
      (Addresses SourceForge RFE #1680500)

    * Screen size can be rotated using the "--orient=portrait" command-line
      option or "orient=portait" configuration file setting.  This swaps